[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "gmx-strategies"
version = "0.1.0"
description = "GMX V2 strategies — liquidation triggering (Data Streams edge), funding rate arb, Keeper bot."
requires-python = ">=3.11"
dependencies = [
    "redis[hiredis]>=5.0",
    "structlog>=24.1",
    "pydantic-settings>=2.3",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "web3>=6.20",
]

[project.scripts]
gmx-strategies = "gmx_strategies.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src/gmx_strategies"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
