[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "gmx-strategies"
version = "0.1.0"
description = "GMX V2 strategies — liquidation triggering (Data Streams edge), funding rate arb, Keeper bot."
requires-python = ">=3.11"
dependencies = [
    # Pinned to specific versions to mitigate supply-chain risk.
    "redis[hiredis]==7.4.0",
    "structlog==25.5.0",
    "pydantic-settings==2.13.0",
    "aiohttp==3.13.5",
    "httpx==0.28.1",
    "web3==7.16.0",
]

[project.scripts]
gmx-strategies = "gmx_strategies.main:main"

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.12",
    "mypy==2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src/gmx_strategies"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
